# squaro

./: .gitignore  Cargo.toml  build.rs  config.toml  q_table.json  readme..txt  rl.py  supervisor.py
src/: comm.rs  enemy.rs  main.rs  projectile.rs  rl_interface.rs  state.rs  text.rs
