[package]
name = "squaro"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.27"
ggez = "0.7.0"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.15"
futures-util = "0.3.17"
log = "0.4"
env_logger = "0.10"
